--- a/application/views/index.phtml
+++ b/application/views/index.phtml
@@ -5,15 +5,21 @@ $url = BASE_URL;
 <head>
       <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
+ <script type="text/javascript" src="//code.jquery.com/jquery-1.12.4.js" ></script>
+ <script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <!-- GOOGLE FONTS-->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
     <title> Panaderia San Miguel </title>
+    <!-- <script type="text/javascript" language="javascript" src="http://localhost:8080/Sia/sia/assets/plugins/jquery/jquery-1.9.1.min.js?ver=14702"></script> -->
 	<!-- BOOTSTRAP STYLES-->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
      <!-- FONTAWESOME STYLES-->
     <link href="assets/css/font-awesome.css" rel="stylesheet" />
         <!-- CUSTOM STYLES-->
     <link href="assets/css/custom.css" rel="stylesheet" />
-     <!-- GOOGLE FONTS-->
-   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
+
+      <!-- #region datatables files -->
 </head>
 <div class="todo">
 <body>
@@ -103,8 +109,6 @@ $url = BASE_URL;
 
      <!-- /. WRAPPER  -->
     <!-- SCRIPTS -AT THE BOTOM TO REDUCE THE LOAD TIME-->
-    <!-- JQUERY SCRIPTS -->
-    <script src="assets/js/jquery-1.10.2.js"></script>
       <!-- BOOTSTRAP SCRIPTS -->
     <script src="assets/js/bootstrap.min.js"></script>
       <!-- CUSTOM SCRIPTS -->
@@ -114,6 +118,7 @@ $url = BASE_URL;
 </body>
 </div>
 <script type="text/javascript">
+
 var total_blanco = 0;
 var total_dulce = 0;
 var total_repos = 0;
@@ -122,6 +127,9 @@ var total_leche = 0;
 var total_cafe = 0;
 var total_choco = 0;
 var total_rebanadas = 0;
+var total_gelatinas = 0;
+var total_pasteles = 0;
+var total_varios = 0;
 
   $("#blanco").click(function(event){
     $(".unidades").removeClass("hidden");
@@ -390,11 +398,12 @@ var total_rebanadas = 0;
     $("#ticket_imprimir").remove();
   });
 
-  $("#repos").click(function(event){
+  $("#rebanadass").click(function(event){
     $(".repos").removeClass("hidden");
-    $(".enviar5").removeClass("hidden");
-    $(".enviar6").removeClass("hidden");
-    $(".enviar7").removeClass("hidden");
+    $(".enviar8").removeClass("hidden");
+    $(".enviar9").removeClass("hidden");
+    $(".enviar10").removeClass("hidden");
+    $(".enviar11").removeClass("hidden");
   });
 
   $(".enviar8").click(function(event){
@@ -410,7 +419,7 @@ var total_rebanadas = 0;
     h3.innerHTML = 'El total de rebanadas es: '+total_rebanadas+'';
     capa.appendChild(h3);
 
-    $('#totales tr:last').after('<tr id=8><td>Leche</td><td id="h">'+total_rebanadas+'</td></tr>');
+    $('#totales tr:last').after('<tr id=8><td>Rebanadas</td><td id="h">'+total_rebanadas+'</td></tr>');
     $(".venta").removeClass("disabled");
     $(".delete8").removeClass("hidden");
     $(".enviar8").addClass("disabled");
@@ -431,6 +440,129 @@ var total_rebanadas = 0;
     $("#ticket_imprimir").remove();
   });
 
+  $("#gelatinass").click(function(event){
+    $(".repos").removeClass("hidden");
+    $(".enviar9").removeClass("hidden");
+  });
+
+  $(".enviar9").click(function(event){
+    $(".gelat").each(function(e){
+      var i = $(this).attr("data-precio");
+      var cantidad = $(this).val();
+      total_gelatinas+= cantidad * i ;
+      // console.log(total_blanco);
+    });
+    var capa = document.getElementById("capa9");
+    var h3 = document.createElement("h3");
+    h3.id="gelatinast"
+    h3.innerHTML = 'El total de gelatinas es: '+total_gelatinas+'';
+    capa.appendChild(h3);
+
+    $('#totales tr:last').after('<tr id=9><td>Gelatinas</td><td id="i">'+total_gelatinas+'</td></tr>');
+    $(".venta").removeClass("disabled");
+    $(".delete9").removeClass("hidden");
+    $(".enviar9").addClass("disabled");
+    $("#total_gen").remove();
+    $("#ticket").remove();
+    $("#ticket_imprimir").remove();
+  });
+
+  $(".delete9").click(function (event) {
+    total_gelatinas = 0;
+    $(".delete9").addClass("hidden");
+    $("#gelatinast").remove();
+    $("#9").remove();
+    $(".enviar9").removeClass("disabled");
+    $(".venta").addClass("disabled");
+    $("#total_gen").remove();
+    $("#ticket").remove();
+    $("#ticket_imprimir").remove();
+  });
+
+  $("#pasteless").click(function(event){
+    $(".repos").removeClass("hidden");
+    $(".enviar10").removeClass("hidden");
+  });
+
+  $(".enviar10").click(function(event){
+    $(".pastel").each(function(e){
+      var i = $(this).attr("data-precio");
+      var cantidad = $(this).val();
+      total_pasteles+= cantidad * i ;
+      // console.log(total_blanco);
+    });
+    var capa = document.getElementById("capa10");
+    var h3 = document.createElement("h3");
+    h3.id="pastelest"
+    h3.innerHTML = 'El total de pasteles es: '+total_pasteles+'';
+    capa.appendChild(h3);
+
+    $('#totales tr:last').after('<tr id=10><td>Pasteles</td><td id="j">'+total_pasteles+'</td></tr>');
+    $(".venta").removeClass("disabled");
+    $(".delete10").removeClass("hidden");
+    $(".enviar10").addClass("disabled");
+    $("#total_gen").remove();
+    $("#ticket").remove();
+    $("#ticket_imprimir").remove();
+  });
+
+  $(".delete10").click(function (event) {
+    total_pasteles = 0;
+    $(".delete10").addClass("hidden");
+    $("#pastelest").remove();
+    $("#10").remove();
+    $(".enviar10").removeClass("disabled");
+    $(".venta").addClass("disabled");
+    $("#total_gen").remove();
+    $("#ticket").remove();
+    $("#ticket_imprimir").remove();
+  });
+
+  $("#varios2s").click(function(event){
+    $(".repos").removeClass("hidden");
+    $(".enviar11").removeClass("hidden");
+  });
+
+  $(".enviar11").click(function(event){
+    $(".varios").each(function(e){
+      var i = $(this).attr("data-precio");
+      var cantidad = $(this).val();
+      if (i==undefined) {
+        i=0;
+        console.log("cantidad: "+cantidad+" y precio: "+i );
+      }else{
+        total_varios+= cantidad * i ;
+        console.log("cantidad: "+cantidad+" y precio: "+i );
+      }
+    });
+    var capa = document.getElementById("capa11");
+    var h3 = document.createElement("h3");
+    h3.id="variost"
+    h3.innerHTML = 'El total de varios es: '+total_varios+'';
+    capa.appendChild(h3);
+
+    $('#totales tr:last').after('<tr id=11><td>Varios</td><td id="k">'+total_varios+'</td></tr>');
+    $(".venta").removeClass("disabled");
+    $(".delete11").removeClass("hidden");
+    $(".enviar11").addClass("disabled");
+    $("#total_gen").remove();
+    $("#ticket").remove();
+    $("#ticket_imprimir").remove();
+  });
+
+  $(".delete11").click(function (event) {
+    total_varios = 0;
+    $(".delete11").addClass("hidden");
+    $("#variost").remove();
+    $("#11").remove();
+    $(".enviar11").removeClass("disabled");
+    $(".venta").addClass("disabled");
+    $("#total_gen").remove();
+    $("#ticket").remove();
+    $("#ticket_imprimir").remove();
+  });
+
+
   $(".venta").click(function(event){
     var a = $("#a").text() != "" ? parseFloat($("#a").text()):0;
     var b = $("#b").text() != "" ? parseInt($("#b").text()):0;
@@ -438,9 +570,13 @@ var total_rebanadas = 0;
     var d = $("#d").text() != "" ? parseInt($("#d").text()):0;
     var e = $("#e").text() != "" ? parseFloat($("#e").text()):0;
     var f = $("#f").text() != "" ? parseFloat($("#f").text()):0;
-    var g = $("#f").text() != "" ? parseFloat($("#g").text()):0;
+    var g = $("#g").text() != "" ? parseFloat($("#g").text()):0;
+    var h = $("#h").text() != "" ? parseFloat($("#h").text()):0;
+    var i = $("#i").text() != "" ? parseFloat($("#i").text()):0;
+    var j = $("#j").text() != "" ? parseFloat($("#j").text()):0;
+    var k = $("#k").text() != "" ? parseFloat($("#k").text()):0;
 
-    var gen = a + b + c + d + e + f + g;
+    var gen = a + b + c + d + e + f + g + h + i + j + k;
 
     $('#to tr:last').after('<tr id="total_gen"><td>El total es</td><td style="text-align:center;">'+gen+'<input class="hidden" type="text" name="total_venta" value="'+gen+'"></td></tr>');
     $(".venta").addClass("disabled");
@@ -466,7 +602,7 @@ $("#esconder1").click(function(){
 });
 
  //
- // $(document).ready(function(){
+  //$(document).ready(function(){
  //  $("body").keyup(function (e) {
     // if (e.keyCode == 66) {
     //   if ($("#loco").hasClass("hidden")) {
@@ -477,7 +613,10 @@ $("#esconder1").click(function(){
     //     $('#loco').addClass("hidden");
     //   }
     // }
- //  });
+
+   //});
  // });
+
+
 
 </script>
