--- a/application/views/contenido/reposteria.phtml
+++ b/application/views/contenido/reposteria.phtml
@@ -1,14 +1,11 @@
 <?php
 $num = array('0'=>'30','1'=>'50','2'=>'80','3'=>'100','4'=>'120','5'=>'150','6'=>'200','7'=>'250','8'=>'300','9'=>'350','10'=>'400','11'=>'450','12'=>'500');
-$relle_1 = array('0'=>'Durazno','1'=>'Fresa','2'=>'Nuez','3'=>'Cajeta','4'=>'Mango');
-$relle_2 = array('0'=>'Frutas mixtas naturales','1'=>'Flan napolitano','2'=>'Muss limon/chocolate','3'=>'Trufa','4'=>'Almendras','5'=>'Galleta oreo');
-$relle_3 = array('0'=>'Queso chess cake','1'=>'Chongos zamoranos','2'=>'Trufa','3'=>'Opera');
 ?>
 <h1 style="text-align:center;"> <?= $titulo ?></h1>
 <div class="reposte">
-  <label class="lab_name" for="">Nombre: </label>&nbsp;<input class="input_usr_rep" type="text" name="" placeholder="Nombre completo del cliente" value="">
+  <label class="lab_name" for="">Nombre: </label>&nbsp;<input class="input_usr_rep name_repos" type="text" name="" placeholder="Nombre completo del cliente" value="">
   <br><br>
-  <label class="lab_name" for="">Dirección: </label>&nbsp;<input class="input_usr_rep" type="text" name="" placeholder="Dirección completo del cliente" value="">
+  <label class="lab_direcc" for="">Dirección: </label>&nbsp;<input class="input_usr_rep direcc_repos" type="text" name="" placeholder="Dirección completo del cliente" value="">
   <br><br>
   <div class="gen_pastel">
     <h3>Datos del pastel</h3>
@@ -23,47 +20,100 @@ $relle_3 = array('0'=>'Queso chess cake','1'=>'Chongos zamoranos','2'=>'Trufa','
       <div class="col-md-4 col-md-offset-?4" id="capa">
       </div>
       <div class="col-md-12">
-        <br>
+
         <label>Precio de relleno: </label>
-        <select class="" name="">
-          <option value="140">$140</option>
-          <option value="160">$160</option>
-          <option value="180">$180</option>
+        <select id="relle_pre" name="">
+          <option class="pre_ind" value="140">$140</option>
+          <option class="pre_ind" value="160">$160</option>
+          <option class="pre_ind" value="180">$180</option>
         </select>
       </div>
-      <div class="" id="relleno">
-      </div>
-      <div class="col-md-12">
-        <h3>Tipo de relleno:</h3>
+      <h3>Tipo de relleno:</h3>
+      <div class="col-md-12 140 hidden" >
         <label>Precio de $140: </label>
-        <select class="" name="">
-          <?php foreach ($relle_1 as $key => $value){ ?>
-              <option class="num" value="<?php echo $value?>"><?php echo $value?></option>
-          <?php } ?>
-        </select>
-        <label>Precio de $160: </label>
-        <select class="" name="">
-          <?php foreach ($relle_2 as $key => $value){ ?>
-              <option class="num" value="<?php echo $value?>"><?php echo $value?></option>
-          <?php } ?>
-        </select>
-        <label>Precio de $180: </label>
-        <select class="" name="">
-          <?php foreach ($relle_3 as $key => $value){ ?>
-              <option class="num" value="<?php echo $value?>"><?php echo $value?></option>
-          <?php } ?>
+        <select class="" id="relleno" name="">
         </select>
       </div>
+      <div class="col-md-12 160 hidden" id="">
+        <label>Precio de $160: </label>
+        <select class="" id="relleno_2" name="">
+        </select>
+      </div>
+      <div class="col-md-12 180 hidden">
+        <label>Precio de $180: </label>
+        <select class="" id="relleno_3" name="">
+        </select>
+      </div>
+      <button class="col-md-offset-4 col-md-4 fin_repos btn btn-success" type="button" name="button">Listo</button>
+      <br><br>
+      <button class="col-md-offset-4 col-md-4 fin_repos_delete btn btn-danger hidden" type="button" name="button">Eliminar total</button>
   </div>
 </div>
 <script type="text/javascript">
+var nombressss = $('.name_repos').val();
+var direcc = $('.direcc_repos').val();
 $("#num_per").change(function(event){
   var cantidad = $(this).val();
   var kg = {'30':'3','50':'5','80':'8','100':'10','120':'12','150':'15','200':'20','250':'25','300':'30','350':'35','400':'40','450':'45','500':'50'};
     if (kg[cantidad]) {
-      $("#capa").html("<label>Kg: </label>&nbsp;<input style='width:12%; height:2.5%;' type='text' value='"+kg[cantidad]+"'>");
-    }else{
-      console.log('fuera de la condicion');
+      $("#capa").html("<label>Kg: </label>&nbsp;<input id='can' style='width:12%; height:2.5%;' type='text' value='"+kg[cantidad]+"'>");
     }
+});
+$("#relle_pre").change(function(event){
+  var select = "";
+  var precio = $(this).val();
+  var relle_1 = {'0':'Durazno','1':'Fresa','2':'Nuez','3':'Cajeta','4':'Mango'};
+  var relle_2 = {'0':'Frutas mixtas naturales','1':'Galleta oreo','2':'Almendras','3':'Trufa','4':'Muss de limón / chocolate','5':'Flan napolitano'};
+  var relle_3 = {'0':'Queso Chess Cake','1':'Chongos zamoranos','2':'Trufa','3':'Opera'};
+  console.log(precio);
+    if (precio=='140') {
+      $(".140").removeClass("hidden");
+      $(".160").addClass("hidden");
+      $(".180").addClass("hidden");
+      for (var i in relle_1) {
+        select+="<option class='num' value='140'>"+relle_1[i]+"</option>";
+      }
+      $("#relleno").html(select);
+    }else if (precio=='160') {
+      $(".140").addClass("hidden");
+      $(".160").removeClass("hidden");
+      $(".180").addClass("hidden");
+      for (var i in relle_2) {
+        select+="<option class='num' value='160'>"+relle_2[i]+"</option>";
+      }
+      $("#relleno_2").html(select);
+    }else{
+      $(".180").removeClass("hidden");
+      $(".160").addClass("hidden");
+      $(".140").addClass("hidden");
+      for (var i in relle_3) {
+        select+="<option class='num' value='180'>"+relle_3[i]+"</option>";
+      }
+      $("#relleno_3").html(select);
+    }
+});
+
+$(".fin_repos").click(function(event){
+  var can = $("#can").val();
+  $('#totales tr:last').after('<tr id="cantidad"><td>Kg de pastel</td><td id="can">'+can+'</td></tr>');
+  // $('#totales table:after').append('<h4>Datos generales de la venta<h4>');
+  $(".venta").removeClass("disabled");
+  $(".fin_repos_delete").removeClass("hidden");
+  $(".fin_repos").addClass("disabled");
+  $("#total_gen").remove();
+  $("#ticket").remove();
+  $("#ticket_imprimir").remove();
+});
+
+$(".fin_repos_delete").click(function (event) {
+  // total_varios = 0;
+  $(".fin_repos_delete").addClass("hidden");
+  // $("#variost").remove();
+  $("#cantidad").remove();
+  $(".fin_repos").removeClass("disabled");
+  $(".venta").addClass("disabled");
+  $("#total_gen").remove();
+  $("#ticket").remove();
+  $("#ticket_imprimir").remove();
 });
 </script>
