--- a/application/views/contenido/tabla.phtml
+++ b/application/views/contenido/tabla.phtml
@@ -1,12 +1,27 @@
 <?php
 $url = BASE_URL;
 // echo "<pre>";
-// print_r($result);
+// print_r($result[0]);
 // echo "</pre>";
  ?>
-<h1>Tabla de ventas</h1>
+ <?php if ($result[0]->tipo_venta=='General') { ?>
+   <h1>Tabla de ventas general</h1>
+ <?php }else{ ?>
+   <h1>Tabla de ventas de Pasteleria</h1>
+ <?php } ?>
 <br>
 <div class="col-md-12">
+  <form method="POST" action="<?php echo $url;?>tabla#sesion" role="form">
+    <div class="" style="width: 28%;margin-left: 40.5%;border: 4px solid #e1935b;border-radius: 20px;">
+      <label for="">Selecione un tipo de venta: </label><br>
+      <input type="radio" name="type_venta" value="all">&nbsp; <label>Todos</label>
+      <input type="radio" name="type_venta" value="General">&nbsp; <label>General</label>
+      <input type="radio" name="type_venta" value="Pasteleria">&nbsp; <label>Pasteleria</label>
+      <br>
+      <button class="btn btn-info" type="submit" name="button"><i class="fa fa-filter "></i>&nbsp;Filtrar</button>
+      <br><br>
+    </div>
+  </form>
   <table class="table table-striped table-bordered table-list" id="tabla">
     <thead>
         <tr>
@@ -31,12 +46,12 @@ $url = BASE_URL;
   </table>
 <div class="col-md-2">
   <form action="<?php echo $url;?>excel_export/action" method="post">
-    <button class="btn btn-success fa fa-file-excel-o btn-lg m-r-5" type="submit" name="export"> Generar excel</button>
+    <button class="btn btn-success btn-lg m-r-5" type="submit" name="export"><i class="fa fa-file-excel-o "></i> Generar excel</button>
   </form>
 </div>
 <div class="col-md-2">
   <form action="<?php echo $url;?>pdfs/generar" method="post">
-    <button class="btn btn-danger fa fa-file-pdf-o btn-lg m-r-5" type="submit" name="export" target="_blank"> Generar imprimir</button>
+    <button class="btn btn-danger btn-lg m-r-5" type="submit" name="export" target="_blank"><i class="fa fa-file-pdf-o "></i> Generar imprimir</button>
     <!-- <input type="submit" value="Crear PDF" title="Crear PDF" /> -->
   </form>
 </div>
